// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table.vue > matches snapshot with entries but no action col props assigned 1`] = `
"<table data-id=\\"sds-table\\" class=\\"table-prose dark:table-prose-invert\\">
  <!---->
  <colgroup>
    <col class=\\"\\">
    <col class=\\"\\">
    <col class=\\"\\">
    <col class=\\"\\">
  </colgroup>
  <thead class=\\"border-t dark:border-gray-800\\">
    <tr>
      <!---->
      <th class=\\"whitespace-nowrap space-x-1 select-none group\\"><button class=\\"\\"><span class=\\"\\">Title</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
            <path d=\\"M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z\\" fill=\\"currentColor\\"></path>
            <!---->
            <!---->
          </svg></button></th>
      <th class=\\"whitespace-nowrap space-x-1 select-none group\\"><button class=\\"\\"><span class=\\"\\">Created</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
            <path d=\\"M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z\\" fill=\\"currentColor\\"></path>
            <!---->
            <!---->
          </svg></button></th>
      <th class=\\"whitespace-nowrap space-x-1 select-none group\\"><button class=\\"\\"><span class=\\"\\">Last modified</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
            <path d=\\"M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z\\" fill=\\"currentColor\\"></path>
            <!---->
            <!---->
          </svg></button></th>
      <th class=\\"whitespace-nowrap space-x-1 select-none group\\"><button class=\\"cursor-default\\"><span class=\\"\\">Actions</span>
          <!---->
        </button></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <!---->
      <td>A title</td>
      <td>12/31/1999</td>
      <td>11/11/2014</td>
      <td><button class=\\"btn btn-link text-red-300 btn-sm\\"><i class=\\"fas fa-trash\\"></i> Remove entry </button></td>
    </tr>
    <!---->
    <tr>
      <!---->
      <td>B title</td>
      <td>1/31/2013</td>
      <td>10/9/2013</td>
      <td><button class=\\"btn btn-link text-red-300 btn-sm\\"><i class=\\"fas fa-trash\\"></i> Remove entry </button></td>
    </tr>
    <!---->
  </tbody>
</table>"
`;

exports[`Table.vue > matches snapshot with items and action col props assigned 1`] = `
"<table data-id=\\"sds-table\\" class=\\"table-prose dark:table-prose-invert\\">
  <!---->
  <colgroup>
    <col class=\\"\\">
    <col class=\\"\\">
    <col class=\\"null\\">
  </colgroup>
  <thead class=\\"border-t dark:border-gray-800\\">
    <tr>
      <!---->
      <th class=\\"whitespace-nowrap space-x-1 select-none group\\"><button class=\\"\\"><span class=\\"\\">Title</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
            <path d=\\"M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z\\" fill=\\"currentColor\\"></path>
            <!---->
            <!---->
          </svg></button></th>
      <th class=\\"whitespace-nowrap space-x-1 select-none group\\"><button class=\\"\\"><span class=\\"\\">Created</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 text-gray-900 dark:text-gray-100 -mt-2 opacity-0 -mb-1\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
            <path d=\\"M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z\\" fill=\\"currentColor\\"></path>
            <!---->
            <!---->
          </svg></button></th>
      <th class=\\"whitespace-nowrap space-x-1 select-none group\\"><button class=\\"\\"><span class=\\"text-gray-900 dark:text-gray-100\\">Last modified</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" aria-hidden=\\"true\\" role=\\"img\\" class=\\"inline-block w-4 h-4 group-hover:opacity-100 text-gray-900 dark:text-gray-100 -mt-2 opacity-100 -mb-3\\" preserveAspectRatio=\\"xMidYMid meet\\" viewBox=\\"0 0 320 512\\">
            <!---->
            <path d=\\"M279 224H41c-21.4 0-32.1-25.9-17-41L143 64c9.4-9.4 24.6-9.4 33.9 0l119 119c15.2 15.1 4.5 41-16.9 41z\\" fill=\\"currentColor\\"></path>
            <!---->
          </svg></button></th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <!---->
      <td>B title</td>
      <td>1/31/2013</td>
      <td>10/9/2013</td>
    </tr>
    <!---->
    <tr>
      <!---->
      <td>A title</td>
      <td>12/31/1999</td>
      <td>11/11/2014</td>
    </tr>
    <!---->
  </tbody>
</table>"
`;

exports[`Table.vue > matches snapshot with no props assigned 1`] = `
"<table data-id=\\"sds-table\\" class=\\"table-prose dark:table-prose-invert\\">
  <!---->
  <colgroup></colgroup>
  <thead class=\\"border-t dark:border-gray-800\\">
    <tr>
      <!---->
    </tr>
  </thead>
  <tbody></tbody>
</table>"
`;
